--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,53 @@
 <html>
   <head>
 
-    
+  <title>Mercado</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <style type="text/css">
+      .produtos{
+        position: relative;
+        display: inline-block;
+        margin-top: 15px;
+        margin-right: 15px;
+        padding: 10px;
+        color: white;
+        background-color: #c4c2c2; 
+        border-radius: 10px;
+        border: solid 3px #4eb249;
+        width: 30%;
+        height: 250px;
+
+      }
+      .btn {
+        margin-left: 35%;
+        margin-top: 5%;
+      }
+      h4 {
+        margin-left: 10%;
+        margin-top: 15%;
+      }
+      h3{
+        text-shadow: black 0.1em 0.1em 0.2em;
+
+      }
+      h1 {
+        color: white;
+        text-shadow: black 0.1em 0.1em 0.2em;
+      }
+      body {
+        background-color: #cde7cc;
+      }
+      p {
+        word-break: break-word;
+
+      }
+    </style>
 
     <title>Mercado</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -16,23 +60,26 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Mercado</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <div class="container center-block">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/produtos">Produtos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/clientes">Clientes</a>
-      </li>
-      
-    
-  </div>
-</nav>
+      <a class="navbar-brand" href="#">Mercado</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/produtos">Produtos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/clientes">Clientes</a>
+          </li>
+          
+        
+      </div>
+    </div>
+    </nav>
   </head>
     
   <body>
@@ -52,7 +99,9 @@
         <%= link_to "Registrar-se", new_user_registration_path, :class => 'navbar-link'  %> |
         <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
       <% end %>
+    <div class="container center-block">
 
-    <%= yield %>
+      <%= yield %>
+    </div>
   </body>
 </html>
