--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,33 +1,28 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Produtos</h1>
+<h1>Produtos a venda</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Nome</th>
-      <th>Descricao</th>
-      <th>Qtd</th>
-      <th>Valor</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
   <tbody>
     <% @produtos.each do |produto| %>
-      <tr>
-        <td><%= produto.nome %></td>
-        <td><%= produto.descricao %></td>
-        <td><%= produto.qtd %></td>
-        <td><%= produto.valor %></td>
-        <td><%= link_to 'Show', produto %></td>
-        <td><%= link_to 'Edit', edit_produto_path(produto) %></td>
-        <td><%= link_to 'Destroy', produto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+          <div class="produtos">
+            <h3><%= produto.nome %></h3>
+            <p><%= produto.descricao %></p>
+            <h4>Valor: <%= produto.valor %></h4>
+            <button type="button" class="btn btn-danger ">Comprar</button>
+            <div style="display: inline-block; top: 10px;">
+              <span><%= link_to 'Ver', produto, class: "btn1 btn-light " %></span>
+              <span><%= link_to 'Editar', edit_produto_path(produto), class: "btn1 btn-light " %></span>
+              <span><%= link_to 'Deletar', produto, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn1 btn-light " %></span>
+            </div>
+  
+          </div>
+
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Produto', new_produto_path %>
+<%= link_to 'Adicionar Produto', new_produto_path, class: "btn btn-info " %>
