--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #fff;
+  background-color: #cde7cc;
   color: #333;
   margin: 33px; }
 
@@ -21,7 +21,7 @@ a:visited {
 
 a:hover {
   color: #fff;
-  background-color: #000; }
+  background-color: rgba(0, 0, 0, 0.5); }
 
 th {
   padding-bottom: 5px; }
@@ -63,3 +63,38 @@ div.actions {
 
 label {
   display: block; }
+
+.produtos{
+  position: relative;
+  display: inline-block;
+  margin-top: 15px;
+  margin-right: 15px;
+  padding: 10px;
+  color: white;
+  background-color: #c4c2c2; 
+  border-radius: 10px;
+  border: solid 3px #4eb249;
+  width: 30%;
+  height: 250px;
+
+}
+.btn {
+  margin-left: 35%;
+  margin-top: 5%;
+}
+h4 {
+  margin-left: 10%;
+  margin-top: 15%;
+}
+h3{
+  text-shadow: black 0.1em 0.1em 0.2em;
+
+}
+h1 {
+  color: white;
+  text-shadow: black 0.1em 0.1em 0.2em;
+}
+p {
+  word-break: break-word;
+
+}
