--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Produtos a venda</h1>
 
 <table>
@@ -14,7 +12,7 @@
             <div style="display: inline-block; top: 10px;">
               <span><%= link_to 'Ver', produto, class: "btn1 btn-light " %></span>
               <span><%= link_to 'Editar', edit_produto_path(produto), class: "btn1 btn-light " %></span>
-              <span><%= link_to 'Deletar', produto, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn1 btn-light " %></span>
+              <span><%= link_to 'Deletar', produto, method: :delete, data: { confirm: 'Tem certeza?' }, class: "btn1 btn-light " %></span>
             </div>
   
           </div>
